// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`WHEN: Pagination with no prev page link > THEN: should match snapshot 1`] = `
<div
  class="mt-12 w-full flex justify-between items-center gap-4"
>
  <div />
  <button
    class="pokemon-pagination-btn pokemon-pagination-next"
  >
    <span>
      Next
    </span>
    <span
      class="pagination-arrow"
    >
      →
    </span>
  </button>
</div>
`;

exports[`WHEN: Pagination with prev page link > THEN: should match snapshot 1`] = `
<div
  class="mt-12 w-full flex justify-between items-center gap-4"
>
  <button
    class="pokemon-pagination-btn pokemon-pagination-prev"
  >
    <span
      class="pagination-arrow"
    >
      ←
    </span>
    <span>
      Previous
    </span>
  </button>
  <button
    class="pokemon-pagination-btn pokemon-pagination-next"
  >
    <span>
      Next
    </span>
    <span
      class="pagination-arrow"
    >
      →
    </span>
  </button>
</div>
`;
